2005-12-27  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* elf32-hppa.c (elf32_hppa_size_dynamic_sections): Use info->executable
	instead of !info->shared.

2005-12-27  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* vaxlinux.h: New file. (TRAD_CORE_EXTRA_SIZE_ALLOWED): Define.
	(HOST_MACHINE_ARCH): Define. This allows cross-building vax-linux
	hosted binutils.

2005-12-27  Nathan Sidwell  <nathan@codesourcery.com>

	* elf32-mt.c (mt_elf_merge_private_bfd_data): Do not allow mixing
	object files from different mt variants.

2005-12-27  Leif Ekblad  <leif@rdos.net>

	* config.bfd: Add support for RDOS targets.

2005-12-27  Marty Leisner  <leisner@rochester.rr.com>

	* dwarf2.c (lookup_symbol_in_function_table): Check for a function
	name before passing it to strcmp.

2005-12-27  Alan Modra  <amodra@bigpond.net.au>

	* elf.c (elf_find_function): Don't ignore section syms.
	Simplify filename logic.

2005-12-27  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (add_stub_sym): Pass info rather than htab.
	Use different names for pic vs non-pic, '.' instead of '_'.
	(allocate_dynrelocs): Adjust add_stub_sym call.

2005-12-27  Alan Modra  <amodra@bigpond.net.au>

	* elf.c (bfd_section_from_shdr): Treat invalid reloc sections as
	normal sections rather than returning false.

2005-12-27  Alan Modra  <amodra@bigpond.net.au>

	* coff-h8300.c (h8300_reloc16_extra_cases): Use input section
	"output_offset" instead of link order "offset".
	* coff-h8500.c (extra_case): Likewise.
	* coff-w65.c (w65_reloc16_extra_cases): Likewise.
	* coff-z80.c (extra_case): Likewise.
	* coff-z8k.c (extra_case): Likewise.
	* linker.c (default_indirect_link_order): Likewise, "size" too.
	* ecoff.c (ecoff_indirect_link_order): Likewise.

2005-12-27  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.
	* po/SRC-POTFILES.in: Regenerate.

2005-12-24  Alan Modra  <amodra@bigpond.net.au>

	* aix5ppc-core.c: Remove duplicate prototypes.